fix marging top

--- a/css/_custom.scss
+++ b/css/_custom.scss
@@ -79,6 +79,10 @@
         border-radius: 5px;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         overflow: hidden;
+
+        &:first-child {
+            margin-top: 0;
+        }
     }
     
     &_img {
