--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,9 @@ body {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   overflow: hidden;
 }
+.gallery_card:first-child {
+  margin-top: 0;
+}
 .gallery_img {
   width: 100%;
   height: auto;
